got flask code to work

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
-    {{ hello }}
+    <h1>Welcome!</h1>
+    <h2 class="noth1">Please <a href="/login">login</a> or <a href="/signup">sign up</a> to get started!</h2>
 
 {% endblock %}
