--- a/flask/app/templates/navbar.html
+++ b/flask/app/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Ice Cream</a>
+      <a class="navbar-brand" href="/"><img src="https://cdn2.iconfinder.com/data/icons/sweet-and-dessert-line-color-patisserie/512/Softserve_ice-cream-512.png" class="icecreamicon"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
